# grim_opencv_testing

./: .gitignore  README  cv_with_python_chapter01_basicimagehandlingandprocessing.ipynb  testcv
images/: lena_grayscale.pgm
linux_cpp/: CMakeLists.txt
linux_cpp/Test01_Basic/: CMakeLists.txt  helloworld.cpp
python_opencv/: 01_webcam.py  02_loadimage.py  04_apitest.py  05_matrixmanip.py  06_maskoperations.py  07_alphablending.py  08_convertimagetograyscale.py  09_playingvideofiles.py  10_recordingvideo.py  11_drawingfunctions.py  12_mouseaspaintbrush.py  13_mouseaspaintbrush2.py  14_trackbar.py  15_imagebasics.py  16_imagebasics2.py  17_imagearithmeticoperations.py  18_imagebitwiseoperatios.py  19_perfmeasurement.py  20_colorspacechange.py  21_imagethresholding.py  22_adaptivethresholding.py  23_geometrictransforms1.py  24_geometrictransforms2.py  imtools.py  pcvb_001.py
udacity_cv/: test01.py  testing_001.ipynb
